...
                            context,
                          ).textTheme.bodySmall?.copyWith(color: Colors.grey),
                        ),
                        InkWell(
                          onTap: () => Navigator.of(context).pushNamed('/login'),
                          child: Text(
                            'Log in',
                            style: TextStyle(
                              fontSize: 13,
                              fontWeight: FontWeight.w500,
                              color: AppColors.brand,
                            ),
                          ),
...
