appId: com.camphubph.camper
---
- launchApp
- tapOn: "Log in"
- tapOn: "Forgot password?"
- tapOn: "Send reset link"
- assertVisible: "Enter your email address."
